--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -5,3 +5,24 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.main-content {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  overflow-y: auto;
+  height: 100vh;
+}
