modified some buttons colors in front & added code ase for database connection

--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -6,10 +6,10 @@
       <button>Send</button>
     </div>
     <div class="social-links">
-      <a href="https://github.com/your-username" target="_blank">
+      <a href="https://github.com/Escanor1986" target="_blank">
         <img src="../../assets/logoGitHub_1.png" alt="GitHub" />
       </a>
-      <a href="https://linkedin.com/in/your-profile" target="_blank">
+      <a href="https://linkedin.com/in/lionelzovi" target="_blank">
         <img src="../../assets/logoLinkedIn_1.png" alt="LinkedIn" />
       </a>
     </div>
