--- a/frontend/src/app/login/login.component.scss
+++ b/frontend/src/app/login/login.component.scss
@@ -43,7 +43,7 @@
         padding: 10px;
         border: none;
         border-radius: 4px;
-        background-color: #47daff;
+        background-color: #47daffde;
         color: #fff;
         cursor: pointer;
         transition: background-color 0.3s;
