--- a/frontend/src/app/footer/footer.component.scss
+++ b/frontend/src/app/footer/footer.component.scss
@@ -52,7 +52,7 @@ footer {
 
       button {
         padding: 8px 15px;
-        background-color: #47daff;
+        background-color: #47daffde;
         border: none;
         border-radius: 4px;
         color: white;
